# samuel_the_raven

./: .gitignore  .pre-commit-config.yaml  README.md  Servo.py  animatron_audio_devices.py  animatron_move.py  animatron_speak.py  anymatron_move.py  anymatron_speak.py  camera_face_tracking.py  config.py  constants.py  e -i HEAD~2  global_state.py  mrc25  mrc25.pub  private_words_behavior.py  pyproject.toml  release_gpio_pins.py  requirements-full.txt  requirements.txt  samuel.py  samuel_async.py  samuel_main.py  setup_samuel.sh  speech_recognition.py  speech_variants.json  staged.diff  timer_window_for_programmer.py  touch_sensor.py  tox.ini  utils.py
