[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samuel-the-raven"
version = "0.1.0"
description = "Animatronic raven control system"
authors = [{ name = "Anat Wax" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "av==14.3.0",
    "dlib==19.24.6",
    "face-recognition==1.3.0",
    "face-recognition-models==0.3.0",
    "jsonschema==4.23.0",
    "lgpio==0.2.2.0",
    "mutagen==1.47.0",
    "numpy==1.26.4",
    "picamera2==0.3.25",
    "piexif==1.1.3",
    "Pillow==11.1.0",
    "pyserial==3.5",
    "python-prctl==1.8.1",
    "RapidFuzz==3.13.0",
    "rpi-kms @ git+https://github.com/raspberrypi/pykms.git@bc8dee4c73f3811807d73e4c045a36ae3d626d80",
    "rpi-lgpio==0.6",
    "scipy==1.15.2",
    "sounddevice==0.5.1",
    "soundfile==0.13.1",
    "vosk==0.3.45",
    "pyaudio==0.2.13",
]
